# falcontool

./: .gitignore  LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
src/: commands.py
src/falcontool.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_cli.py
